# cmake_practice

./: CMakeLists.txt  README.md  main.cpp
internal/lib_1/: CMakeLists.txt  lib_1.cpp  lib_1.h
internal/lib_2/: CMakeLists.txt  lib_2.cpp  lib_2.h
internal/lib_3/: CMakeLists.txt  lib_3.cpp  lib_3.h
